@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Extract some code from enter_exit().
+ server/server.c
+Nicolas Weeger 2010-06-26
+
 Add item type validity check when loading something.
 Nicolas Weeger 2010-06-26
 
